python project for data science

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-1. What is data science/Coursera PQNSUEGD8P12.pdf
-1. What is data science/What is Data Science.docx
-2. Tools for data science/Tools for Data science.docx
+*.pdf
+*.docx
+*.mp4
+
